Added tutorial section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 			<li><a href="https://github.com/schellingb/ZillaLib">GitHub</a></li>
 			<li><a href="/samples/">Samples</a></li>
 			<li><a href="/games/">Games</a></li>
+			<li><a href="/tutorials/">Tutorials</a></li>
 			<li><a href="/project-generator/">Project Generator</a></li>
 {% comment %}
 			<a href="https://twitter.com/ZillaLib" title="Profile in Twitter" target="_blank">twitter</a>
