--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,9 @@ layout: default
 
 <div class="main-content">
 	<article class="module color-5">
-		<h1>{{ page.title }}{{ .shortUrl }}</h1>
+		<h1>{{ page.title }}</h1>
 		<hr>
 		{{ content }}
-		<p class="top"><small><a href="#top">[top]</a></small></p>
 	</article>
 
 {% comment %}
